# compute

./: .appveyor.yml  .gitignore  .travis.yml  BOOST_COMPUTE_ADAPT_STRUCT.html  BOOST_COMPUTE_CLOSURE.html  BOOST_COMPUTE_CL_CALLBACK.html  BOOST_COMPUTE_DECLARE_BINARY_OPERATOR.html  BOOST_COMPUTE_DECLARE_MAKE_VECTOR_TYPE_FUNCTION.html  BOOST_COMPUTE_DECLARE_MAKE_VECTOR_TYPE_FUNCTIONS.html  BOOST_COMPUTE_DECLARE_SCALAR_TYPE_FUNCTION.html  BOOST_COMPUTE_DECLARE_SCALAR_TYPE_FUNCTIONS.html  BOOST_COMPUTE_DECLARE_SCALAR_VECTOR_COMMON_TYPE.html  BOOST_COMPUTE_DECLARE_SCALAR_VECTOR_COMMON_TYPES.html  BOOST_COMPUTE_DECLARE_VECTOR_SCALAR_TYPE_FUNCTION.html  BOOST_COMPUTE_DECLARE_VECTOR_SIZE_FUNCTION.html  BOOST_COMPUTE_DECLARE_VECTOR_SIZE_FUNCTIONS.html  BOOST_COMPUTE_DEFINE_SCALAR_TYPE_NAME_FUNCTION.html  BOOST_COMPUTE_DEFINE_TYPE_NAME_FUNCTIONS.html  BOOST_COMPUTE_DEFINE_VECTOR_TYPE_NAME_FUNCTION.html  BOOST_COMPUTE_DETAIL_ATOMIC_PREFIX.html  BOOST_COMPUTE_DETAIL_DECLARE_CAN_ACCUMULATE_WITH_REDUCE.html  BOOST_COMPUTE_DETAIL_DECLARE_FUNDAMENTAL.html  BOOST_COMPUTE_DETAIL_MAKE_FUNCTION_TYPE.html  BOOST_COMPUTE_FUNCTION.html  BOOST_COMPUTE_MAX_ARITY.html  BOOST_COMPUTE_PRINT_ELEM.html  BOOST_COMPUTE_PRINT_ZIP_IDX.html  BOOST_COMPUTE_STRINGIZE_SOURCE.html  BOOST_COMPUTE_TYPE_NAME.html  BOOST_COMPUTE_VERSION_MAJOR.html  BOOST_COMPUTE_VERSION_MINOR.html  BOOST_COMPUTE_VERSION_PATCH.html  BOOST_COMPUTE_ZIP_GET_N.html  CMakeLists.txt  CONTRIBUTING.md  Jamroot  README  README.md  SECURITY.md  T10  (+6 more)
.travis/: amd_sdk.sh
boost/compute/: accumulate.html  accumulate_idm26496.html  accumulate_idm26528.html  accumulate_idm26592.html  accumulate_idm26624.html  accumulate_idm26656.html  accumulate_idm33648.html  accumulate_idm33744.html  accumulate_idm33776.html  accumulate_idp10035008.html  accumulate_idp10066800.html  accumulate_idp10551616.html  accumulate_idp10584208.html  accumulate_idp10821872.html  accumulate_idp10854384.html  accumulate_idp10919200.html  accumulate_idp10919792.html  accumulate_idp10950992.html  accumulate_idp10951504.html  accumulate_idp11204240.html  accumulate_idp11236832.html  accumulate_idp11333408.html  accumulate_idp11365120.html  accumulate_idp13586864.html  accumulate_idp13619376.html  accumulate_idp13736368.html  accumulate_idp13748960.html  accumulate_idp13780672.html  accumulate_idp14341472.html  accumulate_idp14373104.html  accumulate_idp14435472.html  accumulate_idp14467184.html  accumulate_idp15313344.html  accumulate_idp15345136.html  accumulate_idp15351120.html  accumulate_idp15382752.html  accumulate_idp15749136.html  accumulate_idp15780768.html  accumulate_idp16010224.html  accumulate_idp16041936.html  (+5764 more)
boost_compute/: advanced_topics.html  background.html  design.html  faq.html  getting_started.html  gettingstarted.html  interop.html  performance.html  platforms_and_compilers.html  porting_guide.html  reference.html  tutorial.html
cmake/: BoostComputeConfig.cmake.in  FindOpenCL.cmake
compute/: reference.html
doc/: Jamfile.v2  advanced_topics.qbk  compute.qbk  design.qbk  faq.qbk  getting_started.qbk  interop.qbk  introduction.qbk  performance.qbk  platforms_and_compilers.qbk  porting_guide.qbk  reference.qbk  reference.xml  tutorial.qbk
doc/reference/: algorithm.xml  buffer.xml  cl.xml  cl_ext.xml  (+17 more)
example/: CMakeLists.txt  amd_cpp_kernel.cpp  batched_determinant.cpp  black_scholes.cpp  copy_data.cpp  find_longest_vector.cpp  fizz_buzz.cpp  hello_world.cpp  host_sort.cpp  inline_ptx.cpp  k_means.cpp  list_devices.cpp  longest_vector.cpp  mandelbrot.cpp  mapped_view.cpp  matrix_multiplication.cpp  matrix_transpose.cpp  memory_limits.cpp  monte_carlo.cpp  multi_thread.cpp  nbody.cpp  opencl_test.cpp  opencv_convolution.cpp  opencv_filter.cpp  opencv_flip.cpp  opencv_histogram.cpp  opencv_optical_flow.cpp  opencv_optical_flow_camera.cpp  opencv_sobel_filter.cpp  opengl_sphere.cpp  point_centroid.cpp  price_cross.cpp  print_kernel_id.cpp  print_vector.cpp  qimage_blur.cpp  random_walk.cpp  reaction_diffusion.cpp  resize_image.cpp  simple_kernel.cpp  simple_moving_average.cpp  (+8 more)
index/: s06.html
perf/: CMakeLists.txt  perf.hpp  perf.py  perf_accumulate.cpp  perf_bernoulli_distribution.cpp  perf_binary_find.cpp  perf_blas_saxpy.cpp  perf_bolt_accumulate.cpp  perf_bolt_count.cpp  perf_bolt_exclusive_scan.cpp  perf_bolt_fill.cpp  perf_bolt_inner_product.cpp  perf_bolt_max_element.cpp  perf_bolt_merge.cpp  perf_bolt_partial_sum.cpp  perf_bolt_saxpy.cpp  perf_bolt_sort.cpp  perf_cart_to_polar.cpp  perf_copy_if.cpp  perf_copy_to_device.cpp  perf_count.cpp  perf_count_int.cpp  perf_discrete_distribution.cpp  perf_erase_remove.cpp  perf_exclusive_scan.cpp  perf_fill.cpp  perf_find.cpp  perf_find_end.cpp  perf_host_sort.cpp  perf_includes.cpp  perf_inner_product.cpp  perf_is_permutation.cpp  perf_is_sorted.cpp  perf_linear_congruential_engine.cpp  perf_max_element.cpp  perf_merge.cpp  perf_mersenne_twister.cpp  perf_next_permutation.cpp  perf_nth_element.cpp  perf_partial_sum.cpp  (+74 more)
test/: CMakeLists.txt  Jamfile.v2  check_macros.hpp  context_setup.hpp  distributed_check_functions.hpp  distributed_queue_setup.hpp  opencl_version_check.hpp  quirks.hpp  test_accumulate.cpp  test_adjacent_difference.cpp  test_adjacent_find.cpp  test_adjacent_transform_iterator.cpp  test_allocator.cpp  test_amd_cpp_kernel_language.cpp  test_any_all_none_of.cpp  test_array.cpp  test_async_wait.cpp  test_async_wait_guard.cpp  test_attach_user_queue_error.cpp  test_attach_user_queue_thread_safety.cpp  test_bernoulli_distribution.cpp  test_binary_search.cpp  test_blas_axpy.cpp  test_blas_gemm.cpp  test_blas_gemv.cpp  test_blas_iamax.cpp  test_blas_norm2.cpp  test_buffer.cpp  test_buffer_allocator.cpp  test_buffer_iterator.cpp  test_clamp_range.cpp  test_closure.cpp  test_command_queue.cpp  test_complex.cpp  test_constant_iterator.cpp  test_context.cpp  test_context_error.cpp  test_copy.cpp  test_copy_if.cpp  test_copy_type_mismatch.cpp  (+142 more)
test/data/: invalid_program.cl
test/extra/: CMakeLists.txt  test_interop_eigen.cpp  test_interop_opengl.cpp  test_interop_vtk.cpp  test_multiple_objects2.cpp
(+456 files in other folders)
